| Bug #17411 | cannot have path longer than 128 characters | ||
|---|---|---|---|
| Submitted: | 15 Feb 2006 5:59 | Modified: | 16 Feb 2006 14:17 |
| Reporter: | Stewart Smith | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S2 (Serious) |
| Version: | 5.0.19bk | OS: | Any (all) |
| Assigned to: | Bugs System | Target Version: | |
[15 Feb 2006 5:59]
Stewart Smith
[15 Feb 2006 6:43]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/2632
[16 Feb 2006 5:59]
Stewart Smith
pushed to 5.0.19 and 5.1.7
[16 Feb 2006 14:17]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented in 5.0.19 and 5.1.7 changelogs. Closed.
